--- a/setup.cfg
+++ b/setup.cfg
@@ -4,15 +4,15 @@
 
 [metadata]
 name = cadati
-description = Add a short description here!
-author = Sebastian
-author-email = sebastian.hahn@geo.tuwien.ac.at
+description = calender, data and time functions
+author = TU Wien
+author-email = remote.sensing@geo.tuwien.ac.at
 license = mit
 long-description = file: README.rst
 long-description-content-type = text/x-rst; charset=UTF-8
-url = https://github.com/pyscaffold/pyscaffold/
+url = https://www.geo.tuwien.ac.at/
 project-urls =
-    Documentation = https://pyscaffold.org/
+    Documentation = http://cadati.readthedocs.org/
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
 # Add here all kinds of additional classifiers as defined under
@@ -30,11 +30,11 @@ package_dir =
 # DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
 setup_requires = pyscaffold>=3.2a0,<3.3a0
 # Add here dependencies of your project (semicolon/line-separated), e.g.
-# install_requires = numpy; scipy
+install_requires = numpy; scipy; pandas
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
 # Require a specific Python version, e.g. Python 2.7 or >= 3.4
-# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
+python_requires = >=3.6
 
 [options.packages.find]
 where = src
