--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,7 @@ exclude =
 # PDF = ReportLab; RXP
 # Add here test requirements (semicolon/line-separated)
 testing =
-    pytest
+    pytest==5.0.1
     pytest-cov
 
 [options.entry_points]
