--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -29,7 +29,7 @@ jobs:
           miniconda-version: "latest"
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
-          environment-file: environment_win.yml
+          environment-file: environment.yml
           activate-environment: cadati_env
           auto-activate-base: false
       - name: Print environment infos
